-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
3
-
15378
We regularly notice the following error in the client logs during soak testing with message drop on routers:
LustreError: 7110:0:(osc_cache.c:1565:osc_enter_cache()) soaked-OST0001-osc-ffff88083651dc00: grant { dirty: 8192/8192 dirty_pages: 8192/4096729 dropped: 0 avail: 12132352, reserved: 0, flight: 9 }lru {in list: 1365510, left: 8194, waiters: 0 }try to reserve 4096.
- mentioned in
-
Page Loading...